Updated info and resume

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <div class="container">
         <div class="row">
             <div class="six columns" style="margin-top: 15%; margin-bottom: 15%">
-                <h1 class="header">I'm Francisco</h1>
-                <p class="clean">an <strong>iOS</strong> Developer <!--at <strong><a href="http://pixelmatters.com/" target="_blank"><tag style="background: #FF695C">Pixelmatters</tag></a></strong> -->based in <strong>Porto!</strong></br>
-                I've been working in <strong>iOS</strong> for a little <strong>over</strong> than <strong>one year</strong> while studying Software Engineering at <strong><a href="https://www.isep.ipp.pt/" target="_blank"><tag style="background: #A13F25">ISEP</tag></a></strong>.</br>
+                <h1 class="header" style="font-size:150%;">I'm Francisco</h1>
+                <p class="clean">an <strong>iOS</strong> Developer at <strong><a href="http://farfetch.com/" target="_blank"><tag style="background: #fd4f57">Farfetch</tag></a></strong>, based in <strong>Porto!</strong></br>
+                I've been working in <strong>iOS</strong> for <strong>almost</strong> <strong>two years</strong> while studying Software Engineering at <strong><a href="https://www.isep.ipp.pt/" target="_blank"><tag style="background: #A13F25">ISEP</tag></a></strong>.</br>
             </div>
             <!--<div class="four columns" style="margin-top: 15%">
                  JavaScript game created by Mary Rose Cook at Front-Trends 2014
@@ -51,6 +51,10 @@
         <div class="row" style="margin-top: 20px">
             <div style="justify-content: true">
                 <div class="four columns">
+                    <div class="skill">Farfetch 👗👠</div>
+                    <p class="clean">At <strong><a href="https://appstore.com/farfetch" target="_blank"><tag style="background: #fd4f57">Farfetch</tag></a></strong>, the world’s greatest selection of luxury, I'm maintaining and developing new features for the Discover iOS app
+                </div>
+                <div class="four columns">
                     <div class="skill">Finta ⚽️</div>
                     <p class="clean">At <span style="color: #FF695C"><strong>Pixelmatters</strong></span>, I've had the chance to be part of <strong><a href="https://appsto.re/pt/GEiO9.i" target="_blank"><tag style="background: #00E582">Finta</tag></a></strong>, an app where Social meets Football. I've maintained and developed new features for the iOS app and helped with the development of the Android <strong><a href="https://goo.gl/JRGfHg"  target="_blank"><tag style="background: #00E582">Beta</tag></a></strong> version.
                 </div>
@@ -58,6 +62,10 @@
                     <div class="skill">Jovago ✈️</div>
                     <p class="clean">Through my time there, I've got the luck to build <strong><a href="https://itun.es/i67L3Hr" target="_blank"><tag style="background: #2A72E8">Jovago</tag></a></strong>'s iOS Booking App, from blank to the App Store Release.
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div style="justify-content: true">
                 <div class="four columns">
                     <div class="skill">Leaf 🍃</div>
                     <p class="clean">A small Extension for Visual Studio for highlighting <strong><a href="https://marketplace.visualstudio.com/items?itemName=Francisco.html-leaf" target="_blank"><tag style="background: #8BC52B">Leaf</tag></a></strong> files used with <span style="color: #92A8CF"><strong>Vapor</strong></span>, a framework for Server-Side Swift.
