Top styling refactor and also added Timezones

--- a/index.html
+++ b/index.html
@@ -43,23 +43,27 @@
                     <a href="https://www.linkedin.com/in/franciscoamado" target="_blank" class="btn-social"><i class="fa fa-fw fa-linkedin"></i></a>
                 </div>
             </div>
+
+            <!-- <div class="six columns" style="margin-top: 5%; margin-bottom: 15%">
+                <img src="img/me_hi.JPG" alt="Oh Hi!" width="100%" height="100%" style="opacity: 0.7" >
+            </div> -->
         </div>
         
         <h2 class="header">Where have I been</h2>
         <div class="row" style="margin-top: 20px">
             <div style="justify-content: true">
-                <div class="four columns">
+                <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Farfetch 👗👠</div>
                     <p class="clean">At <strong><a href="https://appstore.com/farfetch" target="_blank"><tag style="background: #fd4f57">Farfetch</tag></a></strong>, a platform for the world’s greatest selection of luxury, I'm maintaining and developing new features for the Discover iOS app.</p>
                     <stamp>Jun 2017 - Present</stamp>
 
                 </div>
-                <div class="four columns">
+                <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Finta ⚽️📷</div>
                     <p class="clean">At <span style="color: #FF695C"><strong>Pixelmatters</strong></span>, I've had the chance to be part of <strong><a href="https://appsto.re/pt/GEiO9.i" target="_blank"><tag style="background: #00E582">Finta</tag></a></strong>, an app where Social meets Football. I've maintained and developed new features for the iOS app and helped with the development of the Android <strong><a href="https://goo.gl/JRGfHg"  target="_blank"><tag style="background: #00E582">Beta</tag></a></strong> version.</p>
                     <stamp>Jun 2016 - Jun 2017</stamp>
                 </div>
-                <div class="four columns">
+                <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Jovago ✈️🏢</div>
                     <p class="clean">Through my time at <span style="color: #F68B1E"><strong>Porto Tech Center</strong></span>, I was lucky to get to build <strong><a href="https://itun.es/i67L3Hr" target="_blank"><tag style="background: #2A72E8">Jovago</tag></a></strong>'s iOS App, from blank to the App Store Release. An App for booking Hotels all over the world.</p>
                     <stamp>Sep 2015 - Mar 2016</stamp>
@@ -69,7 +73,12 @@
         <h2 class="header" style="margin-top: 40px">What have I done</h2>
         <div class="row" style="margin-top: 20px">
             <div style="justify-content: true">
-                <div class="four columns">
+                <div class="four columns" style="margin-top: 20px">
+                    <div class="skill">Timezones 🕔🌍</div>
+                    <p class="clean">A MacOS Status Bar Application for keeping track of different time zones. It is also <strong><a href="https://github.com/FranciscoAmado/Timezones" target="_blank"><tag style="background: #36454f">Open-source</tag></a></strong>.</p>
+                    <stamp>Jul 2018</stamp>
+                </div>
+                <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Leaf 🍃</div>
                     <p class="clean">A small Extension for Visual Studio for highlighting <strong><a href="https://marketplace.visualstudio.com/items?itemName=Francisco.html-leaf" target="_blank"><tag style="background: #8BC52B">Leaf</tag></a></strong> files used with <span style="color: #92A8CF"><strong>Vapor</strong></span>, a framework for Server-Side Swift.</p>
                     <stamp>Dec 2016</stamp>
