Tiny refactor and Added Sortify

--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@
                     <a href="https://www.linkedin.com/in/franciscoamado" target="_blank" class="btn-social"><i class="fa fa-fw fa-linkedin"></i></a>
                 </div>
             </div>
-
-            <!-- <div class="six columns" style="margin-top: 5%; margin-bottom: 15%">
-                <img src="img/me_hi.JPG" alt="Oh Hi!" width="100%" height="100%" style="opacity: 0.7" >
-            </div> -->
         </div>
         
         <h2 class="header">Where have I been</h2>
@@ -71,16 +67,31 @@
             </div>
         </div>
         <h2 class="header" style="margin-top: 40px">What have I done</h2>
-        <div class="row" style="margin-top: 20px">
-            <div style="justify-content: true">
+        <div style="justify-content: true"></div>
+            <div class="row" style="margin-top: 20px">    
                 <div class="four columns" style="margin-top: 20px">
-                    <div class="skill">Timezones 🕔🌍</div>
-                    <p class="clean">A MacOS Status Bar Application for keeping track of different time zones. It is also <strong><a href="https://github.com/FranciscoAmado/Timezones" target="_blank"><tag style="background: #36454f">Open-source</tag></a></strong>.</p>
+                    <div class="skill">Sorting ️⌨</div>
+                    <p class="clean">A Xcode Source Editor Extension for Sorting Lines. 
+                    It is Open-sourced <strong><a href="https://github.com/FranciscoAmado/Sortify" target="_blank"><tag style="background: #36454f">here</tag></a></strong>.</p>
+                    <stamp>Sep 2018</stamp>
+                </div>
+                <div class="four columns" style="margin-top: 20px">
+                    <div class="skill">Intro to Vapor 🎥📣</div>
+                    <p class="clean">I joined <strong><a href="https://twitter.com/damacri86" target="_blank"><tag style="background: #00aced">David Matellano</tag></a></strong> to give an introductory workshop into Server-side Swift with <strong><a href="http://vapor.codes" target="_blank"><tag style="background: #92A8CF">Vapor</tag></a></strong> at the <strong><a href="https://twitter.com/cocoaheadsporto" target="_blank"><tag style="background: #00aced">CocoaHeads Porto</tag></a></strong> meetup. It was also <strong><a href="https://youtu.be/vzpn7FqOUpI" target="_blank"><tag style="background: #ff0000">video recorded</tag></a></strong> 😅.</p>
                     <stamp>Jul 2018</stamp>
                 </div>
                 <div class="four columns" style="margin-top: 20px">
+                    <div class="skill">Timezones 🕔🌍</div>
+                    <p class="clean">A MacOS Status Bar Application for keeping track of different time zones. 
+                    It is Open-sourced <strong><a href="https://github.com/FranciscoAmado/Timezones" target="_blank"><tag style="background: #36454f">here</tag></a></strong>.</p>
+                    <stamp>Jul 2018</stamp>
+                </div>
+            </div>
+            <div class="row" style="margin-top: 20px">
+                <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Leaf 🍃</div>
-                    <p class="clean">A small Extension for Visual Studio for highlighting <strong><a href="https://marketplace.visualstudio.com/items?itemName=Francisco.html-leaf" target="_blank"><tag style="background: #8BC52B">Leaf</tag></a></strong> files used with <span style="color: #92A8CF"><strong>Vapor</strong></span>, a framework for Server-Side Swift.</p>
+                    <p class="clean">A small Extension for Visual Studio for highlighting <strong><a href="https://github.com/vapor/leaf" target="_blank"><tag style="background: #8BC52B">Leaf</tag></a></strong> files used with   <strong><a href="http://vapor.codes" target="_blank"><tag style="background: #92A8CF">Vapor</tag></a></strong>, a framework for Server-Side Swift.
+                    It is Open-sourced <strong><a href="https://github.com/FranciscoAmado/vscode-html-leaf" target="_blank"><tag style="background: #36454f">here</tag></a></strong></p>
                     <stamp>Dec 2016</stamp>
                 </div>
             </div>
@@ -88,13 +99,13 @@
         <div class="row" style="margin-top: 20px">
             <div class="footer">
                 <div class="row" style="margin-bottom: 10px; text-align: center">
-                    <a href="mailto:franciscoamado@live.com.pt" target="_blank" class="btn-social"><i class="fa fa-fw fa-envelope"></i></a>
                     <a href="https://twitter.com/FranciscoSAmado" target="_blank" class="btn-social"><i class="fa fa-fw fa-twitter"></i></a>
                     <a href="https://github.com/FranciscoAmado" target="_blank" class="btn-social"><i class="fa fa-fw fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/franciscoamado" target="_blank" class="btn-social"><i class="fa fa-fw fa-linkedin"></i></a>
+                    <a href="mailto:franciscoamado@live.com.pt" target="_blank" class="btn-social"><i class="fa fa-fw fa-envelope"></i></a>
                     <strong><a href="resume.pdf" target="_blank"><tag style="background: #222"> Résumé</tag></a></strong>
                 </div>
-                <p class="clean">Copyright &copy; Francisco Amado 2018.</p>
+                <h2 class="header" style="font-size:80%;">Copyright &copy; Francisco Amado 2018</h2>
             </div>
         </div>
     </div>
