--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
         <div class="row">
             <div class="six columns" style="margin-top: 15%; margin-bottom: 15%">
                 <h1 class="header" style="font-size:200%;">I'm Francisco</h1>
-                <p class="clean">an <strong>iOS</strong> Developer at <strong><a href="http://farfetch.com/" target="_blank"><tag style="background: #fd4f57">Farfetch</tag></a></strong>, based in <strong>Porto!</strong></br>
-                I've been working in <strong>iOS</strong> for <strong>almost</strong> <strong>three years</strong> while studying Software Engineering at <strong><a href="https://www.isep.ipp.pt/" target="_blank"><tag style="background: #A13F25">ISEP</tag></a></strong>.</p></br>
+                <p class="clean">    
+                    I've been working in <strong>iOS</strong> for <strong>almost</strong> <strong>three years</strong>.</br>
+                    Based in <strong>Porto!</strong></br>
+                    I do <strong>iOS</strong> at <strong><a href="http://farfetch.com/" target="_blank"><tag style="background: #fd4f57">Farfetch</tag></a></strong>.</br>
+                    I study Software Engineering at <strong><a href="https://www.isep.ipp.pt/" target="_blank"><tag style="background: #A13F25">ISEP</tag></a></strong>.</br>
+                    I'm building <strong><a href="https://incomee.co/" target="_blank"><tag style="background: #005FFF">Incomee</tag></a></strong>, the finance app for freelancers.</p></br>
                 <div style="margin-bottom: 15px; text-align: left">
                     <a href="https://twitter.com/FranciscoSAmado" target="_blank" class="btn-social"><i class="fa fa-fw fa-twitter"></i></a>
                     <a href="https://github.com/FranciscoAmado" target="_blank" class="btn-social"><i class="fa fa-fw fa-github"></i></a>
@@ -70,7 +74,7 @@
         <div style="justify-content: true"></div>
             <div class="row" style="margin-top: 20px">    
                 <div class="four columns" style="margin-top: 20px">
-                    <div class="skill">Sorting ️⌨</div>
+                    <div class="skill">Sortify ️⌨</div>
                     <p class="clean">A Xcode Source Editor Extension for Sorting Lines. 
                     It is Open-sourced <strong><a href="https://github.com/FranciscoAmado/Sortify" target="_blank"><tag style="background: #36454f">here</tag></a></strong>.</p>
                     <stamp>Sep 2018</stamp>
