Make things prettier 💅🏻

--- a/index.html
+++ b/index.html
@@ -36,80 +36,82 @@
             <div class="six columns" style="margin-top: 15%; margin-bottom: 15%">
                 <h1 class="header" style="font-size:200%;">I'm Francisco</h1>
                 <p class="clean">    
-                    I've been working in <strong>iOS</strong> for <strong>almost</strong> <strong>three years</strong>.</br>
-                    Based in <strong>Porto!</strong></br>
-                    I do <strong>iOS</strong> at <strong><a href="http://farfetch.com/" target="_blank"><tag style="background: #fd4f57">Farfetch</tag></a></strong>.</br>
-                    I study Software Engineering at <strong><a href="https://www.isep.ipp.pt/" target="_blank"><tag style="background: #A13F25">ISEP</tag></a></strong>.</br>
-                    I'm building <strong><a href="https://incomee.co/" target="_blank"><tag style="background: #005FFF">Incomee</tag></a></strong>, the finance app for freelancers.</p></br>
-                <div style="margin-bottom: 15px; text-align: left">
-                    <a href="https://twitter.com/FranciscoSAmado" target="_blank" class="btn-social"><i class="fa fa-fw fa-twitter"></i></a>
-                    <a href="https://github.com/FranciscoAmado" target="_blank" class="btn-social"><i class="fa fa-fw fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/franciscoamado" target="_blank" class="btn-social"><i class="fa fa-fw fa-linkedin"></i></a>
-                </div>
+                    <strong>iOS Engineer, Book Reader and Coffee Lover</strong> based in <strong>Porto!</strong></br>
+                    I'm working on <strong>iOS</strong> at <strong><a href="http://farfetch.com/" target="_blank"><tag style="background: #fd4f57">Farfetch</tag></a></strong>.</br>
+                    Studying for a Master's degree at <strong><a href="https://www.isep.ipp.pt/" target="_blank"><tag style="background: #A13F25">ISEP</tag></a></strong>.</br>
+                    Building <strong><a href="https://incomee.co/" target="_blank"><tag style="background: #005FFF">Incomee</tag></a></strong>, the finance app for freelancers.</p></br>
             </div>
         </div>
         
-        <h2 class="header">Where have I been</h2>
+        <h2 class="header">Experience</h2>
         <div class="row" style="margin-top: 20px">
             <div style="justify-content: true">
                 <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Farfetch 👗👠</div>
-                    <p class="clean">At <strong><a href="https://appstore.com/farfetch" target="_blank"><tag style="background: #fd4f57">Farfetch</tag></a></strong>, a platform for the world’s greatest selection of luxury, I'm maintaining and developing new features for the Discover iOS app.</p>
+                    <stamp>iOS Engineer</stamp></br>
                     <stamp>Jun 2017 - Present</stamp>
-
+                    <p class="clean" style="margin-top: 10px">At <strong><a href="https://appstore.com/farfetch" target="_blank"><tag style="background: #fd4f57">Farfetch</tag></a></strong>, a platform for the world’s greatest selection of luxury, I'm maintaining and developing new features for the Discover iOS app.</p>
                 </div>
                 <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Finta ⚽️📷</div>
-                    <p class="clean">At <span style="color: #FF695C"><strong>Pixelmatters</strong></span>, I've had the chance to be part of <strong><a href="https://appsto.re/pt/GEiO9.i" target="_blank"><tag style="background: #00E582">Finta</tag></a></strong>, an app where Social meets Football. I've maintained and developed new features for the iOS app and helped with the development of the Android <strong><a href="https://goo.gl/JRGfHg"  target="_blank"><tag style="background: #00E582">Beta</tag></a></strong> version.</p>
+                    <stamp>iOS Engineer</stamp></br>
                     <stamp>Jun 2016 - Jun 2017</stamp>
+                    <p class="clean" style="margin-top: 10px">At <span style="color: #FF695C"><strong>Pixelmatters</strong></span>, I've had the chance to be part of <strong><a href="https://appsto.re/pt/GEiO9.i" target="_blank"><tag style="background: #00E582">Finta</tag></a></strong>, an app where Social meets Football. I've maintained and developed new features for the iOS app and helped with the development of the Android <strong><a href="https://goo.gl/JRGfHg"  target="_blank"><tag style="background: #00E582">Beta</tag></a></strong> version.</p>
                 </div>
                 <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Jovago ✈️🏢</div>
-                    <p class="clean">Through my time at <span style="color: #F68B1E"><strong>Porto Tech Center</strong></span>, I was lucky to get to build <strong><a href="https://itun.es/i67L3Hr" target="_blank"><tag style="background: #2A72E8">Jovago</tag></a></strong>'s iOS App, from blank to the App Store Release. An App for booking Hotels all over the world.</p>
+                    <stamp>Junior iOS Engineer</stamp></br>
                     <stamp>Sep 2015 - Mar 2016</stamp>
+                    <p class="clean" style="margin-top: 10px">Through my time at <span style="color: #F68B1E"><strong>Porto Tech Center</strong></span>, I was lucky to get to build <strong><a href="https://itun.es/i67L3Hr" target="_blank"><tag style="background: #2A72E8">Jovago</tag></a></strong>'s iOS App, from blank to the App Store Release. An App for booking Hotels all over the world.</p>
                 </div>
             </div>
         </div>
-        <h2 class="header" style="margin-top: 40px">What have I done</h2>
+        <h2 class="header" style="margin-top: 40px">Projects</h2>
         <div style="justify-content: true"></div>
-            <div class="row" style="margin-top: 20px">    
+            <div class="row" style="margin-top: 20px">
+                <div class="four columns" style="margin-top: 20px">
+                    <div class="skill">Incomee 📱🌍</div>
+                    <stamp>Launching soon 🚀</stamp>
+                    <p class="clean" style="margin-top: 10px">I'm building <strong><a href="https://incomee.co/" target="_blank"><tag style="background: #005FFF">Incomee</tag></a></strong>. The income tracker for freelancers.</p>
+                </div>
                 <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Sortify ️⌨</div>
-                    <p class="clean">A Xcode Source Editor Extension for Sorting Lines. 
-                    It is Open-sourced <strong><a href="https://github.com/FranciscoAmado/Sortify" target="_blank"><tag style="background: #36454f">here</tag></a></strong>.</p>
                     <stamp>Sep 2018</stamp>
+                    <p class="clean" style="margin-top: 10px">A Xcode Source Editor Extension for Sorting Lines. 
+                    It is Open-sourced <strong><a href="https://github.com/FranciscoAmado/Sortify" target="_blank"><tag style="background: #36454f">here</tag></a></strong>.</p>
                 </div>
                 <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Intro to Vapor 🎥📣</div>
-                    <p class="clean">I joined <strong><a href="https://twitter.com/damacri86" target="_blank"><tag style="background: #00aced">David Matellano</tag></a></strong> to give an introductory workshop into Server-side Swift with <strong><a href="http://vapor.codes" target="_blank"><tag style="background: #92A8CF">Vapor</tag></a></strong> at the <strong><a href="https://twitter.com/cocoaheadsporto" target="_blank"><tag style="background: #00aced">CocoaHeads Porto</tag></a></strong> meetup. It was also <strong><a href="https://youtu.be/vzpn7FqOUpI" target="_blank"><tag style="background: #ff0000">video recorded</tag></a></strong> 😅.</p>
                     <stamp>Jul 2018</stamp>
-                </div>
-                <div class="four columns" style="margin-top: 20px">
-                    <div class="skill">Timezones 🕔🌍</div>
-                    <p class="clean">A MacOS Status Bar Application for keeping track of different time zones. 
-                    It is Open-sourced <strong><a href="https://github.com/FranciscoAmado/Timezones" target="_blank"><tag style="background: #36454f">here</tag></a></strong>.</p>
-                    <stamp>Jul 2018</stamp>
+                    <p class="clean" style="margin-top: 10px">I joined <strong><a href="https://twitter.com/damacri86" target="_blank"><tag style="background: #00aced">David Matellano</tag></a></strong> to give an introductory workshop into Server-side Swift with <strong><a href="http://vapor.codes" target="_blank"><tag style="background: #92A8CF">Vapor</tag></a></strong> at the <strong><a href="https://twitter.com/cocoaheadsporto" target="_blank"><tag style="background: #00aced">CocoaHeads Porto</tag></a></strong> meetup. It was also <strong><a href="https://youtu.be/vzpn7FqOUpI" target="_blank"><tag style="background: #ff0000">recorded</tag></a></strong> 😅.</p>
                 </div>
             </div>
             <div class="row" style="margin-top: 20px">
                 <div class="four columns" style="margin-top: 20px">
+                    <div class="skill">Timezones 🕔🌍</div>
+                    <stamp>Jul 2018</stamp>
+                    <p class="clean" style="margin-top: 10px">A MacOS Status Bar Application for keeping track of different time zones. 
+                    It is Open-sourced <strong><a href="https://github.com/FranciscoAmado/Timezones" target="_blank"><tag style="background: #36454f">here</tag></a></strong>.</p>
+                </div>
+                <div class="four columns" style="margin-top: 20px">
                     <div class="skill">Leaf 🍃</div>
-                    <p class="clean">A small Extension for Visual Studio for highlighting <strong><a href="https://github.com/vapor/leaf" target="_blank"><tag style="background: #8BC52B">Leaf</tag></a></strong> files used with   <strong><a href="http://vapor.codes" target="_blank"><tag style="background: #92A8CF">Vapor</tag></a></strong>, a framework for Server-Side Swift.
-                    It is Open-sourced <strong><a href="https://github.com/FranciscoAmado/vscode-html-leaf" target="_blank"><tag style="background: #36454f">here</tag></a></strong></p>
                     <stamp>Dec 2016</stamp>
+                    <p class="clean" style="margin-top: 10px">A small Extension for Visual Studio for highlighting <strong><a href="https://github.com/vapor/leaf" target="_blank"><tag style="background: #8BC52B">Leaf</tag></a></strong> files used with   <strong><a href="http://vapor.codes" target="_blank"><tag style="background: #92A8CF">Vapor</tag></a></strong>, a framework for Server-Side Swift.
+                    It is Open-sourced <strong><a href="https://github.com/FranciscoAmado/vscode-html-leaf" target="_blank"><tag style="background: #36454f">here</tag></a></strong></p>
                 </div>
             </div>
         </div>
         <div class="row" style="margin-top: 20px">
             <div class="footer">
                 <div class="row" style="margin-bottom: 10px; text-align: center">
-                    <a href="https://twitter.com/FranciscoSAmado" target="_blank" class="btn-social"><i class="fa fa-fw fa-twitter"></i></a>
-                    <a href="https://github.com/FranciscoAmado" target="_blank" class="btn-social"><i class="fa fa-fw fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/franciscoamado" target="_blank" class="btn-social"><i class="fa fa-fw fa-linkedin"></i></a>
-                    <a href="mailto:franciscoamado@live.com.pt" target="_blank" class="btn-social"><i class="fa fa-fw fa-envelope"></i></a>
-                    <strong><a href="resume.pdf" target="_blank"><tag style="background: #222"> Résumé</tag></a></strong>
+                    <a href="mailto:franciscoamado@live.com.pt" target="_blank" class="btn-social">👋🏻</i></a>
                 </div>
-                <h2 class="header" style="font-size:80%;">Copyright &copy; Francisco Amado 2018</h2>
+                <div class="row" style="margin-bottom: 10px; text-align: center">
+                    <a href="https://twitter.com/FranciscoSAmado" target="_blank" class="social"><strong>Twitter.</strong></a>
+                    <a href="https://github.com/FranciscoAmado" target="_blank" class="social"><strong>GitHub.</strong></i></a>
+                    <a href="https://www.linkedin.com/in/franciscoamado" target="_blank" class="social"><strong>LinkedIn.</strong></a>
+                    <a href="resume.pdf" target="_blank" class="social"><strong>Résumé.</strong></a>
+                </div>
             </div>
         </div>
     </div>
@@ -118,3 +120,4 @@
     <script type="text/javascript" src="js/analytics.js"></script>
 </body>
 </html>
+<!-- Copyright &copy; Francisco Amado 2019 -->
